fix: fix overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,4 @@
 
 html {
     font-family: 'Montserrat';
-    overflow: hidden;
 }
